k scroll position detection in place for playlist nav buttons; just need to fix their positioning and figure out how to toggle visibility on scroll

--- a/src/scss/skin-sm/_skin-sm.scss
+++ b/src/scss/skin-sm/_skin-sm.scss
@@ -104,6 +104,7 @@ $backdrop-bgc: hsla(0,0%,98%,.2);
 .#{$prefix}-ui-sharetogglebutton, 
 .#{$prefix}-ui-sharebutton,
 .#{$prefix}-ui-settingstogglebutton, 
+.#{$prefix}-ui-playlistmenunavbutton, 
 .#{$prefix}-ui-playlistmenutogglebutton, 
 .#{$prefix}-ui-closebutton,
 .#{$prefix}-ui-fullscreentogglebutton,
